# linshare-ai-backend

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
src/ai_backend/: __init__.py
tests/: test_ai_backend.py
